tests/ui/ast_rule.stderr
error[E0505]: cannot move out of `body` because it is borrowed
  --> tests/ui/ast_rule.rs:14:10
   |
12 |     let body = vec![blit];
   |         ---- binding `body` declared here
13 |     let rule = rule(&loc, hlit, &body);
   |                                 ----- borrow of `body` occurs here
14 |     drop(body);
   |          ^^^^ move out of `body` occurs here
15 |     let _end = rule;
   |                ---- borrow later used here
